# Raw-Alchemy

./: .gitignore  README.md  README_zh-CN.md  RawAlchemy-onedir.spec  RawAlchemy.spec  pyproject.toml  setup.py
.github/workflows/: release.yml
src/raw_alchemy/: cli.py  constants.py  core.py  gui.py  lensfun_wrapper.py  orchestrator.py  utils.py  xmp_generator.py  xmp_tool_gui.py
